--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.6.3"
+    "mongoose": "^8.6.3",
+    "resend": "^4.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
