--- a/front/.env
+++ b/front/.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_API_URL="http://localhost:8000/api/v1/auth/"
+NEXT_PUBLIC_API_URL="http://localhost:8000/api/v1/"
 
 NEXT_PUBLIC_CLOUD_NAME="dapexbd9t"
